<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary_room"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_margin="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_notfound"
        android:id="@+id/summary_room_display"
        android:layout_margin="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary_timestamp"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_margin="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_notfound"
        android:id="@+id/summary_timestamp_display"
        android:layout_margin="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary_allowed_time"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_margin="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_notfound"
        android:id="@+id/summary_timelimit_display"
        android:layout_margin="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary_players"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_margin="8dp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>