<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ending_root">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:text="@string/ending_heading"
        android:textSize="40sp"
        style="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ending_your_score"
        style="@style/Base.TextAppearance.AppCompat.Title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ending_default_score"
        android:id="@+id/ending_score_display"
        style="@style/Base.TextAppearance.AppCompat.Display1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ending_achievements"
        style="@style/Base.TextAppearance.AppCompat.Title" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ending_achievements_display" />




</LinearLayout>