<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:id="@+id/player_root"
    tools:context="pt.ndp.escaperoom.PlayerActivity">

    <TextView
        android:id="@+id/display_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_time"
        android:layout_gravity="center"
        style="@style/Base.TextAppearance.AppCompat.Display1" />

    <EditText
        android:id="@+id/input"
        android:layout_marginTop="125dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_hint"
        android:textSize="24sp"
        android:inputType="text"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/button_submit"
        android:textSize="20sp"
        android:onClick="inputCode"
        android:padding="24dp"
        android:layout_gravity="center"
        style="@style/TextAppearance.AppCompat.Button" />

    <TextView
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        style="@style/Base.TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:textSize="24sp"
        android:text="@string/score"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/display_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/default_score"
        android:layout_gravity="center"
        />


</LinearLayout>
