<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="pt.ndp.escaperoom.AdminActivity">

    <!-- ViewGroup for setting parameters -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:layout_alignParentTop="true"
        android:id="@+id/admin_parameters">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parameters"
            android:textSize="24sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/files_directory"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/list_rooms" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allowed_time"
                android:id="@+id/textView"
                android:textSize="16sp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/hours"
                android:ems="4"
                android:id="@+id/input_hours" />

    <!--        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours"
                android:id="@+id/textView2"
                android:textSize="16sp" />-->

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/minutes"
                android:ems="4"
                android:id="@+id/input_minutes" />

    <!--        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes"
                android:id="@+id/textView3"
                android:textSize="16sp" /> -->

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/seconds"
                android:ems="4"
                android:id="@+id/input_seconds" />

    <!--        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seconds"
                android:id="@+id/textView4"
                android:textSize="16sp" /> -->
        </LinearLayout>

        <!-- <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="16sp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/input_password" />
        </LinearLayout> -->

    </LinearLayout>

    <!-- Player names and emails -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/admin_parameters"
        android:layout_above="@+id/button_launch"
        android:id="@+id/admin_players">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/players"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/name"
                android:ems="4"
                android:id="@+id/input_name" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:ems="6"
                android:id="@+id/input_email"/>

            <Button
                android:id="@+id/button_add_player"
                android:onClick="addPlayer"
                android:text="@string/button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/display_players" />

    </LinearLayout>

    <Button android:id="@+id/button_launch"
        android:onClick="launchRoom"
        android:text="@string/button_launch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>
